--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=dbms_study
+
+spring.datasource.url=jdbc:mysql://localhost:3306/post
+spring.datasource.username=root
+spring.datasource.password=ksy30077!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+mybatis.mapper-locations=mappers/*.xml
